fixes #20. text align rewrited

--- a/src/elrte/css/elrte.css
+++ b/src/elrte/css/elrte.css
@@ -111,7 +111,7 @@
 .el-rte.small .workzone { min-height:250px; }
 
 /* source code */
-.el-rte textarea  { width:100%;  height:100%; min-height:400px; border:none; zoom:1;}
+.el-rte textarea  { width:100%;  height:100%; min-height:400px; border:none; zoom:1; outline:none;}
 .el-rte.small textarea  { min-height:250px;}
 /* редактор */
 .el-rte iframe    { 
